# scripts

./: .gitmodules  AUTHORS  COPYRIGHT  README
ansible/: ansible.cfg  inventory.yaml  inventory.yml  jupyter.yml  playbook.yaml  playbook.yml  reboot.yaml  reboot.yml  run.sh  scripts-directors-cib.yaml  scripts-directors-cib.yml  scripts-directors.yml  scripts-proxy.yml  scripts-real.yml  scripts-syslog.yaml  scripts-syslog.yml  sql.yml
ansible/files/: conntrack  cps_  ldirectord.cf  nrpe_local.cfg  scripts-syslog.conf  zephyr-syslog
ansible/files/dotfiles/: .bashrc  .emacs  .ldapvirc  .screenrc  .vimrc
ansible/files/scripts-maint/: style.css
ansible/filter_plugins/: permute.py  subnetmath.py
ansible/inventory/: inventory.yml
ansible/lookup_plugins/: moira_ghal.py
ansible/templates/: real_ether_interfaces.yml.j2
ansible/vault/: corosync-authkey
host/credit-card/: host.py  shell.py
host/debian/scripts-syslog-ng-config/: d_zroot.pl
host/debian/scripts-vm-host/: conserver-sudoers  conserver.cf.divert
host/doc/: install-xen
ldap/doc/: install-ldap
ldap/el/specs/: scripts-ldap-base.spec
lvs/doc/: install-howto
noc/: .gitignore  setup.sh
noc/html/: .htaccess  graph.php  index.php  load.php  mysql.php  ping.php  rrdgraph.inc.php  rrdgraph.lib.php
noc/html/.attic/: show.php
noc/munin/: munin.conf
noc/munin/plugins/: afs_df_athena.mit.edu  afs_df_sipb.mit.edu  cps_www
noc/munin/templates/: munin-comparison-day.tmpl  munin-comparison-month.tmpl  munin-comparison-week.tmpl  munin-comparison-year.tmpl  munin-domainview.tmpl  munin-nodeview.tmpl  munin-overview.tmpl  munin-serviceview.tmpl
noc/nagios/: base.cfg  cgi.cfg  checkcommands.cfg  cnagios.pl  cnagiosrc  contacts.cfg  hostgroups.cfg  hosts.cfg  misccommands.cfg  nagios.cfg  services.cfg  sipb.cfg
noc/nagios/private/: .gitignore  resource-dist.cfg
noc/nagios/scripts-plugins/: check_svn
noc/nagios/status-user/: finger.sh
noc/ng/: .gitignore  README  README.map
noc/ng/cgi-bin/: show.cgi  testcolor.cgi  testentry.pl
noc/ng/etc/: httpd-ng.conf  map  nagios-ng.cfg  nagiosgraph.conf
proxy/doc/: install-howto
python/: setup.py
python/sipb/jupyter/: userdb.py
selinux/: .gitignore  Makefile  selinux.conf  set_booleans.sh
server/: README
server/common/config/: httpd.conf
server/common/oursrc/accountadm/: .gitignore  Makefile.am  Makefile.in  admof.c  admof.in  configure.ac  configure.in  cronload  get-homedirs  ldap-backup  mbash.in  mbashrc  modbashrc  mrproper  signup-scripts-backend.in  vhostadd  vhostedit
server/common/oursrc/accountadm/debian/: changelog  control  rules
server/common/oursrc/execsys/: Makefile.am  Makefile.in  configure.ac  configure.in  execsys-binfmt  execsys-binfmt.pre  execsys-binfmt.service  execsys.conf  git  gitproxy.pl  ldapize.pl  local-smtp-proxy  mime.types  mrproper  scripts-git.socket  scripts-git.xinetd  scripts-git@.service  scripts-local-smtp.socket  scripts-local-smtp.xinetd  scripts-local-smtp@.service  scripts-svn.socket  scripts-svn.xinetd  scripts-svn@.service  static-cat.c.pre  staticsys-cat.c.pre  svn  svnproxy.pl  upd-execsys
server/common/oursrc/execsys/debian/: control  control.in  rules
server/common/oursrc/lockeradm/: Makefile.in  admof.in  bash.in  bashrc  configure.in  modbash.in  mrproper  signup-scripts-backend.in  signup-scripts-frontend.c
server/common/oursrc/scripts-static-cat/: StaticCat.hs  scripts-static-cat.cabal  static-cat.go  test.html  test.py
server/common/oursrc/shackle/: Makefile.am  configure.ac  shackle  shackle.service.in  shackle.socket
server/common/oursrc/sqladm/: Makefile.in  configure.in  mrproper  signup-sql.c
server/common/oursrc/sqladm/debian/: changelog  control
server/common/oursrc/tokensys/: Makefile.in  configure.in  crontab  mrproper  renew.in  scripts-afsagent-startup.in  scripts-afsagent-startup.service  scripts-afsagent.service
server/common/oursrc/tokensys/debian/: changelog  scripts-tokensys.postrm  scripts-tokensys.prerm
server/common/patches/: 389-ds-base-fix-changelog-paths.patch  389-ds-indirect-cos.patch  (+111 more)
server/doc/: 389-ds-enable-ssl-and-kerberos.diff  HOWTO-SETUP-LDAP  adding-static-exts  admof.in.num  cutover  install-fedora  install-howto  install-howto.sh  install-ldap  install-xen  install-xvm  kernel-build-howto  krb5-kuserok-scripts.patch.num  ldap-kerberos-replication.txt  migrate  openafs-diff.num  openafs-diff.txt  package-build-howto  perl  perl_snapshot.pm  rpm  rpm_snapshot  upgrade-tips
server/fedora/: .gitignore  Makefile  ansible-config-me.service  ansible-config-me.sh
vhosts/: apache2.conf  apache2.conf-backup  apache2.conf-new  apache2.conf-newssl  apache2.conf-newuserdir  apache2.conf-nossl  apache2.conf-oldssl  apache2.conf-olduserdir  old-kitchen-sink.conf  server.php  server1.php  vhosts-vhost-names.gen.sh
vhosts/conf.d/: 11.306.conf  11.439.conf  11.941.conf  13.704.conf  2011.conf  4.155.conf  4.396.conf  6.034.conf  6.170.se23.conf  6.186.conf  adam_s.conf  africans.conf  africans.mit.edu.conf  ai6034.mit.edu.conf  aidanc.conf  airlinedata.conf  akishore.conf  amirh.conf  andersk.conf  apo.conf  apr.conf  aresnick.conf  arosado.conf  arosado.mit.edu.conf  ashdown.conf  ashdown.mit.edu.conf  asksipb.conf  aslitwin.conf  barnowl.conf  bavicchi.conf  bgelb.conf  biyeun.conf  bpope.conf  broder.conf  bt.conf  burton-conner.conf  campusrcg.conf  cbayley.conf  cdsa.conf  cesun.conf  (+163 more)
vhosts/settings/: 6001.mit.edu  aaphotogallery.mit.edu  amirhirsch.com  ashdown.mit.edu  ashdownhouse.org  ats.mit.edu  bookx.mit.edu  bunnyfish.mit.edu  cadr.mit.edu  cfg-lib.mit.edu  diz.mit.edu  e-entry.mit.edu  eastgate.mit.edu  eire.mit.edu  fizzix.mit.edu  fpgacommunity.com  fpgahpc.com  fpgaos.com  fpgasupercomputing.com  fpgawiki.com  hpcfpga.com  isg-lib.mit.edu  mariachi.mit.edu  maslab.mit.edu  nh4.mit.edu  presbrey.mit.edu  ps3network.org  rclinux.com  robots.mit.edu  rov.mit.edu  scripts-test.mit.edu  scripts.mit.edu  scripts1.presbrey.net  scripts2.presbrey.net  scripts3.presbrey.net  tdc.mit.edu  torg.mit.edu  tpss.mit.edu  urops.mit.edu
(+969 files in other folders)
