AC_INIT(signup-scripts-frontend.c)

AC_PROG_CC

AC_DEFUN(REQUIRE_PATH,[
AC_SUBST($1_path)
if test "[$]$1_path" = ""; then
        AC_ERROR(Cannot find $1)
fi
])

AC_DEFUN(LOCATE,[
AC_PATH_PROG($1_path, $1)
REQUIRE_PATH($1)
])

dnl Needed by signup-scripts-backend.in

LOCATE(hesinfo)
LOCATE(ldapadd)
LOCATE(sudo)

dnl Needed by mbash.in

LOCATE(bash)

AC_OUTPUT(Makefile)
AC_OUTPUT(signup-scripts-backend)
AC_OUTPUT(mbash)
