AC_INIT()

AC_DEFUN(REQUIRE_PATH,[
AC_SUBST($1_path)
if test "[$]$1_path" = ""; then
        AC_ERROR(Cannot find $1)
fi
])

AC_ARG_WITH(kinit,
[  --with-kinit[=PATH]       kinit is located at PATH],[
  if test "$withval" != "no" -a "$withval" != "yes"; then
    kinit_path="$withval"
  fi
])
REQUIRE_PATH(kinit)

AC_ARG_WITH(aklog,
[  --with-aklog[=PATH]       aklog is located at PATH],[
  if test "$withval" != "no" -a "$withval" != "yes"; then
    aklog_path="$withval"
  fi
])
REQUIRE_PATH(aklog)

AC_ARG_WITH(fs,
[  --with-fs[=PATH]          fs is located at PATH],[
  if test "$withval" != "no" -a "$withval" != "yes"; then
    fs_path="$withval"
  fi
])
REQUIRE_PATH(fs)

AC_OUTPUT(Makefile)
AC_OUTPUT(renew)
AC_OUTPUT(scripts-afsagent-startup)
